--- a/client-apps/.env.example
+++ b/client-apps/.env.example
@@ -1,6 +1,6 @@
-AUTH_SECRET="zUvdxo/BuxpW5xeWLR2Z9j2SPOalJkZzR689L1RNH8Q="
+AUTH_SECRET="0v5YYuW1fYzE6NB2Kn0eww=="
 AUTH_URL=http://localhost:3000/
 
-NEXT_PUBLIC_COGNITO_CLIENT_ID=YOUR_COGNITO_CLIENT_ID
-NEXT_PUBLUC_COGNITO_ID_TOKEN_EXPIRED=YOUR_COGNITO_ID_TOKEN_EXPIRED
+NEXT_PUBLIC_COGNITO_CLIENT_ID=sjl7dpb1cp7ohfmerjm10c3sq
+NEXT_PUBLUC_COGNITO_ID_TOKEN_EXPIRED=60 minutes
 NEXT_PUBLIC_API_GATEWAY_URL=YOUR_API_GATEWAY_URL
